--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "dependencies": {
         "bootstrap": "^4.0.0-alpha.6",
         "font-awesome": "4.7.0",
+        "gulp-sitemap": "^7.6.0",
         "jquery": "^3.2.1",
         "jquery.easing": "^1.4.1",
         "magnific-popup": "^1.1.0",
