--- a/package.json
+++ b/package.json
@@ -40,8 +40,15 @@
         "gulp": "^3.9.1",
         "gulp-clean-css": "^3.0.4",
         "gulp-header": "1.8.8",
+        "gulp-modernizr": "^4.0.1",
         "gulp-rename": "^1.2.2",
         "gulp-sass": "^3.1.0",
         "gulp-uglify": "^2.1.2"
+    },
+    "scripts": {
+        "preinstall": "npx npm-force-resolutions"
+    },
+    "resolutions": {
+        "graceful-fs": "^4.2.4"
     }
 }
